--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
-        <p>alo</p>
+        <p>pagina inicial. </p> <a HREF="login.html"> Inicie sesión </a> <a> para continuar</a>
     </body>
+
 </html>
