--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-        <p>pagina inicial. </p> <a HREF="login.html"> Inicie sesión </a> <a> para continuar</a>
+        <p>pagina inicial. </p> <a href="login.html"> Inicie sesión </a> <a> para continuar</a>
     </body>
 
 </html>
+
